Added documentation to website

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 <li>Translating documents;</li>
 <li>The linguistic consequences of transclusion and / or conditional profiling.</li>
 </ol>
+
+        <p><a href="doc/index.html">Read the documentation here</a>.</p>
+
       </section>
     </div>
 
