--- a/role/link/index.html
+++ b/role/link/index.html
@@ -13,7 +13,7 @@
 		<h1>PACBook Link Fixup Role</h1>
 		<p>This XLink role is used in <a href="https://github.com/STANLEYSecurity/PACBook">PACBook</a> to fix up links after transclusion.</p>
 		<rddl:resource xlink:title="Documentation"
-		               xlink:role="http://docbook.org/ns/docbook"
+		               xlink:role="http://www.iana.org/assignments/media-types/text/html"
 		               xlink:arcrole="http://www.rddl.org/purposes#reference"
 		               xlink:href="http://stanleysecurity.github.io/PACBook/doc/index.html">
 			<h2>Documentation</h2>
