--- a/ns/transclusion/index.html
+++ b/ns/transclusion/index.html
@@ -20,7 +20,7 @@
 			<p>Use <a href="https://github.com/STANLEYSecurity/PACBook/blob/master/xml/pacbook.rng">pacbook.rng</a> for validation.</p>
 		</rddl:resource>
 		<rddl:resource xlink:title="Documentation"
-		               xlink:role="http://docbook.org/ns/docbook"
+		               xlink:role="http://www.iana.org/assignments/media-types/text/html"
 		               xlink:arcrole="http://www.rddl.org/purposes#reference"
 		               xlink:href="http://stanleysecurity.github.io/PACBook/doc/index.html">
 			<h2>Documentation</h2>
