Namespace bug fixes
Fixed wording in index pages for namespace and role URIs

--- a/role/link/index.html
+++ b/role/link/index.html
@@ -23,7 +23,7 @@
 		               xlink:role="http://www.w3.org/1999/XSL/Transform"
 		               xlink:href="https://github.com/STANLEYSecurity/PACBook/blob/master/xsl/TransLinks.xsl">
 			<h2>Transformation</h2>
-			<p>Use <a href="https://github.com/STANLEYSecurity/PACBook/blob/master/xsl/TransLinks.xsl">TransLinks.xsl</a> to fix up IDs after transclusion.</p>
+			<p>Use <a href="https://github.com/STANLEYSecurity/PACBook/blob/master/xsl/TransLinks.xsl">TransLinks.xsl</a> to fix up links after transclusion.</p>
 		</rddl:resource>
 	</body>
 </html>
