--- a/role/transclusion/index.html
+++ b/role/transclusion/index.html
@@ -11,7 +11,7 @@
 
 	<body>
 		<h1>PACBook Transclusion Resource Role</h1>
-		<p>TThis XLink role is used in <a href="https://github.com/STANLEYSecurity/PACBook">PACBook</a> to define resources for transclusion.</p>
+		<p>This XLink role is used in <a href="https://github.com/STANLEYSecurity/PACBook">PACBook</a> to define resources for transclusion.</p>
 		<rddl:resource xlink:title="Documentation"
 		               xlink:role="http://www.iana.org/assignments/media-types/text/html"
 		               xlink:arcrole="http://www.rddl.org/purposes#reference"
