--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/STANLEYSecurity/PACBook">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/janiveer/PACBook">View on GitHub</a>
 
           <h1 id="project_title">PACBook</h1>
           <h2 id="project_tagline">Linguistic pre-processing for XML documentation</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/STANLEYSecurity/PACBook/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/STANLEYSecurity/PACBook/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/janiveer/PACBook/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/janiveer/PACBook/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -37,17 +37,14 @@
 <li>Translating documents;</li>
 <li>The linguistic consequences of transclusion and / or conditional profiling.</li>
 </ol>
-
-        <p><a href="doc/index.html">Read the documentation here</a>.</p>
-
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">PACBook maintained by <a href="https://github.com/STANLEYSecurity">STANLEYSecurity</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">PACBook maintained by <a href="https://github.com/janiveer">janiveer</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
